complete UI overhaul + added login and signup page

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,4 @@
-<div class="text-gray-800 text-center text-xs inset-x-0 bottom-0 sticky">
-    This is not a real blog
+<hr class="mt-10 mb-0">
+<div class="text-blue-300 text-center text-xs inset-x-0 bottom-0 mt-6 mb-6">
+    This is not a real blog or is it?
 </div>
