--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
     <%- include('./partials/head.ejs')  %>
-<body class="font-custom bg-gray-900">
+<body class="font-inter">
     <!-- container start -->
-    <div class="md:container md:mx-auto p-10">
+    <div class="md:container mx-auto px-5 md:px-32">
         <!-- navbar start -->
         <%- include('./partials/navbar.ejs')  %>
         <!-- navbar end -->
-        <div class="mt-4 p-20 text-white text-center text-3xl">
-            Error 404!<br>
-            This Page Does Not Exist. 😬
+        <div class="text-center mt-20">
+            <svg class="h-20 w-20 inline-block text-red-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
+            </svg>
+            <p class="text-red-600 text-xl mt-4 mb-5">404 - Page not found</p>
+            <a href="/" class="text-blue-600 hover:text-blue-900">Go to home</a>
         </div>
+        <%- include('./partials/footer.ejs') %>
     </div>
-    <%- include('./partials/footer.ejs') %>
+
 </body>
 </html>
