--- a/views/blogs/create.ejs
+++ b/views/blogs/create.ejs
@@ -2,29 +2,74 @@
 <html lang="en">
 <%- include('../partials/head.ejs')  %>
 
-<body class="font-custom bg-gray-900">
-  <!-- container start -->
-  <div class="md:container md:mx-auto p-10">
-    <!-- navbar start -->
-    <%- include('../partials/navbar.ejs')  %>
-    <!-- navbar end -->
-    <div class="mt-4 p-8">
-      <form action="/blogs" method="POST">
-        <div class="flex flex-col">
-          <label for="title" class="text-white text-3xl mb-2">Blog title: </label>
-          <input type="text" id="title" name="title" class="bg-gray-300 rounded-lg w-1/2 p-3 hover:bg-white transition duration-150 ease-in-out" required>
-          <label for="body" class="text-white text-3xl mb-2 mt-10">Blog body: </label>
-          <textarea id="body" name="body" class="bg-gray-200 rounded-lg w-1/2 h-40 p-3 hover:bg-white transition duration-150 ease-in-out" required></textarea>
-          <div>
-            <button class="bg-gray-300 text-gray-900 hover:bg-gray-700 hover:text-white mt-10 font-bold py-2 px-6 text-xl rounded-lg transition duration-100 ease-in-out">
-              Submit
-            </button>
-          </div>
-        </div>
-      </form>
+<body class="font-inter">
+    <!-- container start -->
+    <div class="md:container mx-auto px-5 md:px-32">
+        <!-- navbar start -->
+        <%- include('../partials/navbar.ejs')  %>
+        <!-- navbar end -->
+        <!-- <div class="mt-4 p-8">
+            <form action="/blogs" method="POST">
+                <div class="flex flex-col">
+                    <label for="title" class="text-white text-3xl mb-2">Blog title: </label>
+                    <input type="text" id="title" name="title"
+                        class="bg-gray-300 rounded-lg w-1/2 p-3 hover:bg-white transition duration-150 ease-in-out"
+                        required>
+
+                    <label for="body" class="text-white text-3xl mb-2 mt-10">Blog body: </label>
+                    <textarea id="body" name="body"
+                        class="bg-gray-200 rounded-lg w-1/2 h-40 p-3 hover:bg-white transition duration-150 ease-in-out"
+                        required></textarea>
+                    <div>
+                        <button
+                            class="bg-gray-300 text-gray-900 hover:bg-gray-700 hover:text-white mt-10 font-bold py-2 px-6 text-xl rounded-lg transition duration-100 ease-in-out">
+                            Submit
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div> -->
+
+
+        <section>
+            <h1 class="font-bold text-3xl md:text-5xl mt-1 md:mt-2 text-blue-900 tracking-tight leading-tight">Create blog</h1>
+            <hr class="mt-1 md:mt-10 md:mb-10 invisible md:visible">
+            <div class="flex flex-col md:flex-row mt-0 md:mt-10">
+                <div class="w-full md:w-1/4">
+                    <p class="text-blue-600 mt-5 md:mt-0">@username</p>
+                    <hr class="mt-2 mb-0 invisible md:visible md:mt-10 md:mb-10 mr-8 ">
+                    <p class="mr-0 md:mr-8 text-gray-600">
+                        Today is 
+                        <script> document.write(new Date().toDateString()); </script>
+                        <!-- <script> document.write(new Date().toLocaleDateString()); </script> --> 
+                    <p/>
+                    <hr class="mt-8 -mb-4 mr-0 md:mt-10 md:mb-10 md:mr-8 ">
+                    <a href="" class="invisible md:visible md:mt-6 text-blue-600 hover:text-blue-800 flex items-center">
+                        <svg class="h-4 w-4 mr-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
+                        </svg>
+                        Back to home
+                    </a>
+                </div>
+                <div class="2-full md:w-3/4 mt-4 md:-mt-4">
+                    <form action="/blogs" method="POST">
+                        <label class="block" for="title">
+                            <span class="text-gray-600">Blog title:</span>
+                            <input type="text" id="title" name="title" required class="form-input mt-1 block w-full appearance-none border-2 border-blue-200 focus:border-blue-600 focus:outline-none rounded p-2 placeholder-gray-400 text-gray-600" placeholder="Enter the title for the blog">
+                        </label>
+                        <label class="block mt-6" for="body">
+                            <span class="text-gray-600">Blog body:</span>
+                            <textarea type="text" id="body" name="body" required class="form-input mt-1 block w-full appearance-none border-2 border-blue-200 focus:border-blue-600 focus:outline-none rounded p-2 h-64 placeholder-gray-400 text-gray-600" placeholder="Write about the blog here"></textarea>
+                        </label>
+                        <button class="mt-10 border-2 border-blue-200 rounded px-6 py-2 text-blue-700 bg-blue-200 hover:text-blue-900 hover:border-blue-600">
+                            Submit
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </section>
+        <%- include('../partials/footer.ejs') %>
     </div>
-  </div>
-  <%- include('../partials/footer.ejs') %>
 </body>
 
 </html>
