--- a/views/blogs/details.ejs
+++ b/views/blogs/details.ejs
@@ -2,15 +2,15 @@
 <html lang="en">
 <%- include('../partials/head.ejs')  %>
 
-<body class="font-custom bg-gray-900">
+<body class="font-inter">
     <!-- container start -->
-    <div class="md:container md:mx-auto p-10">
+    <div class="md:container mx-auto px-5 md:px-32">
         <!-- navbar start -->
         <%- include('../partials/navbar.ejs')  %>
         <!-- navbar end -->
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 text-white mt-4">
+        <!-- <div class="grid grid-cols-1 md:grid-cols-2 gap-4 text-white mt-4">
             <div
-                class="bg-gray-700 rounded-lg border-solid border-2 border-gray-700 hover:border-gray-100 p-8 overflow-hidden transition duration-150 ease-in-out">
+                class="bg-gray-700 rounded-lg border-solid border-2 border-gray-700 hover:border-gray-100 p-8 overflow-hidden">
                 <h3 class="text-white text-3xl font-bold w-full"><%= blog.title %></h3>
                 <h6 class="text-gray-500 text-sm -mt-1">Farhan ⋅ <%= blog.createdAt.toDateString() %></h6>
                 <p class="text-gray-300 text-lg hover:text-gray-100 mt-2 mb-8"><%= blog.body %></p>
@@ -20,9 +20,58 @@
                     </div>
                 </a>
             </div>
-        </div>
+        </div> -->
+
+        <section>
+            <p class="text-gray-600 mt-1 md:mt-6 text-center"><%= blog.createdAt.toDateString() %></p>
+            <h1 class="font-bold text-3xl md:text-5xl mt-1 md:mt-2 text-blue-900 tracking-tight text-center leading-tight"><%= blog.title %></h1> 
+            <hr class="mt-1 md:mt-10 md:mb-10 invisible md:visible">
+            <div class="flex flex-col md:flex-row mt-0 md:mt-10">
+                <div class="w-full md:w-1/4">
+                    <p class="text-blue-600 text-center md:text-left">@username</p>
+                    <hr class="mt-2 mb-0 invisible md:visible md:mt-10 md:mb-10 mr-8 ">
+                    <div class="mr-0 md:mr-8 text-center md:text-left">
+                        <button class="mr-2 border text-sm md:text-base rounded px-2 py-1 border-blue-200 hover:bg-blue-200 text-blue-600 hover:text-blue-900">
+                            <a href="" class="md:visible flex items-center">
+                                <svg class="h-4 w-4 mr-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
+                                </svg>
+                                Edit
+                            </a>
+                        </button>
+                        <button class="mt-2 border text-sm md:text-base rounded px-2 py-1 border-red-200 hover:bg-red-200 text-red-600 hover:text-red-900">
+                            <a href="" class="delete md:visible flex items-center" data-doc="<%= blog._id %>">
+                                <svg class="h-4 w-4 mr-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+                                </svg>
+                                Delete
+                            </a>
+                        </button>
+                    </div>
+                    <hr class="mt-8 -mb-4 mr-0 md:mt-10 md:mb-10 md:mr-8 ">
+                    <a href="" class="invisible md:visible md:mt-6 text-blue-600 hover:text-blue-800 flex items-center">
+                        <svg class="h-4 w-4 mr-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
+                        </svg>
+                        Back to home
+                    </a>
+                </div>
+                <div class="2-full md:w-3/4 mt-0 md:-mt-4">
+                    <p class="text-gray-600 mt-4 leading-relaxed text-">
+                        <%= blog.body %>
+                    </p>
+                    <a href="/" class="md:visible mt-3 md:mt-6 text-blue-600 hover:text-blue-800 flex items-center">
+                        <svg class="h-4 w-4 mr-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
+                        </svg>
+                        Back to home
+                    </a>
+                </div>
+            </div>
+        </section>
+        <%- include('../partials/footer.ejs') %>
     </div>
-    <%- include('../partials/footer.ejs') %>
+
     <script>
         const trashcan = document.querySelector('a.delete');
 
