--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -14,6 +14,24 @@
     <div class="hidden top-navbar w-full lg:inline-flex lg:flex-grow lg:w-auto" id="navItems">
         <div
             class="lg:inline-flex lg:flex-row lg:ml-auto lg:w-auto w-full lg:items-center items-start flex flex-col lg:h-auto">
+            
+            <!-- if -->
+            <% if (user) { %>
+            <p href="" class="cursor-default lg:inline-flex lg:w-auto w-full mr-2 mt-3 md:mt-0 border border-white text-blue-600 hover:text-blue-900">
+                <span class="">Hi, <span class="underline"><%= user.email %></span></span>
+            </p>
+            <a href="/" class="lg:inline-flex lg:w-auto w-full m-1 mx-0 md:mx-2 mt-2 md:mt-1 border border-white text-blue-600 hover:text-blue-900">
+                <span>Blogs</span>
+            </a>
+            <a href="/blogs/create" class="lg:inline-flex lg:w-auto w-full m-1 mx-0 md:mx-2 mt-2 md:mt-1 border border-white text-blue-600 hover:text-blue-900">
+                <span>Create</span>
+            </a>
+            <a href="/logout" class="lg:inline-flex lg:w-auto w-full ml-0 md:ml-2 border border-white md:border-blue-200 rounded m-1 md:py-1 md:px-3 text-blue-600 bg-white md:bg-blue-200 hover:text-blue-900">
+                <span>Log out</span>
+            </a>
+
+            <!-- else -->
+            <% } else { %>
             <a href="/" class="lg:inline-flex lg:w-auto w-full mr-2 mt-3 md:mt-0 border border-white text-blue-600 hover:text-blue-900">
                 <span>Blogs</span>
             </a>
@@ -26,6 +44,7 @@
             <a href="/signup" class="lg:inline-flex lg:w-auto w-full ml-0 md:ml-2 border border-white md:border-blue-200 rounded m-1 md:py-1 md:px-3 text-blue-600 bg-white md:bg-blue-200 hover:text-blue-900">
                 <span>Sign up</span>
             </a>
+            <% } %>
         </div>
     </div>
 </nav>
