fixed mavbar bug on mobile

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -52,10 +52,10 @@
 <script>
     function navToggler() {
         var x = document.getElementById("navItems");
-        if (x.style.display === "none") {
-            x.style.display = "block";
-        } else {
+        if (x.style.display === "block") {
             x.style.display = "none";
+        } else {
+            x.style.display = "block";
         }
     }
 </script>
