--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <%- include('./partials/head.ejs')  %>
     <style>
-    .custom-container {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        -moz-transform: translateX(-50%) translateY(-50%);
-        -webkit-transform: translateX(-50%) translateY(-50%);
-        transform: translateX(-50%) translateY(-50%);
-    }
+        .custom-container {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            -moz-transform: translateX(-50%) translateY(-50%);
+            -webkit-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%);
+        }
     </style>
 </head>
+
 <body class="font-inter custom-container -mt-16 bg-gray-100 md:bg-white">
     <main class="bg-gray-100 p-0 md:px-20 md:py-12 rounded-lg">
         <a href="/" class="flex text-center justify-evenly">
             <div class="flex items-center text-blue-900">
                 <svg class="fill-current h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                xmlns="http://www.w3.org/2000/svg">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path>
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M13 10V3L4 14h7v7l9-11h-7z"></path>
                 </svg>
                 <span class="text-2xl font-bold tracking-wide ml-1">Zlog</span>
             </div>
@@ -33,19 +36,25 @@
             <p class="text-red-600 mt-1 "></p> -->
             <label class="block mt-5" for="email">
                 <span class="text-gray-600 text-sm">Email:</span>
-                <input type="text" name="email" class="form-input mt-1 block w-84 appearance-none border-2 border-blue-200 focus:border-blue-600 focus:outline-none rounded p-2 text-gray-600" placeholder="Enter your email">
+                <input type="text" name="email"
+                    class="form-input mt-1 block w-84 appearance-none border-2 border-blue-200 focus:border-blue-600 focus:outline-none rounded p-2 text-gray-600"
+                    placeholder="Enter your email">
             </label>
             <p class="email error text-red-600 mt-1"></p>
             <label class="block mt-5" for="password">
                 <span class="text-gray-600 text-sm">Password:</span>
-                <input type="password" name="password" class="form-input mt-1 block w-84 appearance-none border-2 border-blue-200 focus:border-blue-600 focus:outline-none rounded p-2 text-gray-600" placeholder="Enter password">
+                <input type="password" name="password"
+                    class="form-input mt-1 block w-84 appearance-none border-2 border-blue-200 focus:border-blue-600 focus:outline-none rounded p-2 text-gray-600"
+                    placeholder="Enter password">
             </label>
             <p class="password error text-red-600 mt-1"></p>
-            <button class="mt-8 border-2 border-blue-200 text-center w-full rounded px-4 py-2 text-blue-700 bg-blue-200 hover:text-blue-900 hover:border-blue-600">
+            <button
+                class="mt-8 border-2 border-blue-200 text-center w-full rounded px-4 py-2 text-blue-700 bg-blue-200 hover:text-blue-900 hover:border-blue-600">
                 Sign up
             </button>
         </form>
-        <p class="text-gray-600 mt-2">Already have an account? <a href="/login" class="text-blue-600 hover:text-blue-900">Sign in here.</a></p>
+        <p class="text-gray-600 mt-2">Already have an account? <a href="/login"
+                class="text-blue-600 hover:text-blue-900">Sign in here.</a></p>
     </main>
 </body>
 <script>
@@ -85,4 +94,5 @@
         }
     });  
 </script>
+
 </html>
