--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <%- include('./partials/head.ejs')  %>
+
 <body class="font-inter">
     <!-- container start -->
     <div class="md:container mx-auto px-5 md:px-32">
         <!-- navbar start -->
         <%- include('./partials/navbar.ejs')  %>
         <!-- navbar end -->
-        <h1 class="font-bold text-3xl md:text-6xl text-blue-900 tracking-tight">Latest</h1> 
-        <p class="text-lg text-gray-600">All the latest blogs about anything in one place. <a href="/blogs/create" class="text-blue-600 hover:text-blue-900">Create one</a> right now.</p> 
+        <h1 class="font-bold text-3xl md:text-6xl text-blue-900 tracking-tight">Latest</h1>
+        <p class="text-lg text-gray-600">All the latest blogs about anything in one place. <a href="/blogs/create"
+                class="text-blue-600 hover:text-blue-900">Create one</a> right now.</p>
 
         <section>
             <% if (blogs.length > 0) {%>
@@ -22,10 +24,13 @@
                 <div class="2-full md:w-3/4 mt-4 md:-mt-1">
                     <h4 class="text-2xl font-bold text-blue-900 tracking-tight"><%= blog.title %></h4>
                     <p class="text-gray-600 mt-4 leading-relaxed text-"><%= blog.body %></p>
-                    <a href="/blogs/<%= blog._id %>" class="mt-4 text-blue-600 hover:text-blue-800 inline-flex items-center">
+                    <a href="/blogs/<%= blog._id %>"
+                        class="mt-4 text-blue-600 hover:text-blue-800 inline-flex items-center">
                         Read more
-                        <svg class="h-4 w-4 ml-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3" />
+                        <svg class="h-4 w-4 ml-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M14 5l7 7m0 0l-7 7m7-7H3" />
                         </svg>
                     </a>
                 </div>
