--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -19,15 +19,15 @@
     <main class="bg-blue-50 p-0 md:px-20 md:py-12 rounded-lg">
         <a href="/" class="flex text-center justify-evenly">
             <div class="flex items-center text-blue-800">
-                <svg class="fill-current h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                <svg class="fill-current h-7 w-7" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                     xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M13 10V3L4 14h7v7l9-11h-7z"></path>
                 </svg>
-                <span class="text-2xl font-bold tracking-wide ml-1">Zlog</span>
+                <span class="text-3xl font-bold tracking-wide ml-1">Zlog</span>
             </div>
         </a>
-        <p class="text-3xl text-center mt-8 mb-8 text-blue-500">Sign up</p>
+        <p class="text-2xl text-center mt-8 mb-8 text-gray-600">Sign up</p>
         <form action="/signup">
             <!-- <label class="block" for="username">
                 <span class="text-gray-600 text-sm">Username:</span>
@@ -35,26 +35,26 @@
             </label>
             <p class="text-red-600 mt-1 "></p> -->
             <label class="block mt-5" for="email">
-                <span class="text-gray-500 text-sm">Email:</span>
+                <span class="text-gray-600 text-sm">Email:</span>
                 <input type="text" name="email" id="email"
-                    class="form-input mt-1 block w-84 appearance-none border-2 border-blue-200 focus:border-blue-600 focus:outline-none rounded p-2 text-gray-500"
+                    class="form-input mt-1 block w-84 appearance-none border-2 border-blue-200 focus:border-blue-600 focus:outline-none rounded p-2 text-gray-500 placeholder-gray-300"
                     placeholder="Enter your email">
             </label>
             <p class="email error text-red-600 mt-1"></p>
             <label class="block mt-5" for="password">
-                <span class="text-gray-500 text-sm">Password:</span>
+                <span class="text-gray-600 text-sm">Password:</span>
                 <input type="password" name="password" id="password"
-                    class="form-input mt-1 block w-84 appearance-none border-2 border-blue-200 focus:border-blue-600 focus:outline-none rounded p-2 text-gray-500"
+                    class="form-input mt-1 block w-84 appearance-none border-2 border-blue-200 focus:border-blue-600 focus:outline-none rounded p-2 text-gray-500 placeholder-gray-300"
                     placeholder="Enter password">
             </label>
             <p class="password error text-red-600 mt-1"></p>
             <button
-                class="mt-8 border-2 border-blue-200 text-center w-full rounded px-4 py-2 text-blue-600 bg-blue-200 hover:text-blue-800 hover:border-blue-600">
+                class="mt-8 border-2 border-blue-200 text-center w-full rounded px-4 py-2 text-blue-600 bg-blue-200 hover:text-blue-700 hover:border-blue-600">
                 Sign up
             </button>
         </form>
         <p class="text-gray-500 mt-2">Already have an account? <a href="/login"
-                class="text-blue-500 hover:text-blue-800">Sign in here.</a></p>
+                class="text-blue-500 hover:text-blue-700">Sign in here.</a></p>
     </main>
 </body>
 <script>
